--- a/resumemaker/templates/project_list.html
+++ b/resumemaker/templates/project_list.html
@@ -19,8 +19,8 @@
             <td>{{ project.project_name }}</td>
             <td>{{ project.technology_used }}</td>
             <td>
-                <a href="{% url 'project_edit' project.id %}" class="btn btn-sm btn-outline-primary">Edit</a>
-                <a href="{% url 'project_delete' project.id %}" class="btn btn-sm btn-outline-danger" onclick="return confirm('Are you sure you want to delete this project?')">Delete</a>
+                <a href="{% url 'project_edit' project.id %}" class="btn btn-sm btn-outline-primary mb-2">Edit</a>
+                <a href="{% url 'project_delete' project.id %}" class="btn btn-sm btn-outline-danger mb-2" onclick="return confirm('Are you sure you want to delete this project?')">Delete</a>
             </td>
         </tr>
         {% endfor %}
