changes in resume

--- a/resumemaker/templates/resume.html
+++ b/resumemaker/templates/resume.html
@@ -29,6 +29,9 @@
 	</div>
     <p class="name" style="padding-top: 1cm;display:block;">Name: <b>{{ ename }}</b></p>
     <p class="designation" style="padding-top: -0.25cm;">Designation: <b>{{ edesignation }}</b></p>
+	<p class="email" style="padding-top: -0.25cm;">Email: <b>{{ eemail }}</b></p>
+	<p class="phone" style="padding-top: -0.25cm;">Phone: <b>{{ ephone }}</b></p>
+	<p class="linkedin" style="padding-top: -0.25cm;">LinkedIn: <b>{{ elinkedin }}</b></p>
 	<hr>
     
 	<p class="heading" style="padding-top: 0.5cm;font-size: large;font-weight: bold;">Professional Summary:</p>
